--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-*{
- color : #22262A;
-}
-
-
 @media screen and (max-width:765px) {
     .navbar_links{
         flex-direction: column;
@@ -24,7 +19,7 @@
         display: block;
         padding: 1.5;
         font-size: 5vw;
-        background-color: #A754F7;
+        background-color: #0DA6E9;
         color :white !important;
     }
 
