--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #F7F5FB;
+}
+/* .profile img{
+    width: 300px;
+} */
+
 @media screen and (max-width:765px) {
     .navbar_links{
         flex-direction: column;
