--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F7F5FB;
+    background-color: #F9FAFB;
 }
 /* .profile img{
     width: 300px;
@@ -16,7 +16,7 @@ body {
         height: 100vh;
         padding: 2rem;
         visibility: hidden;
-        background-color: aqua;
+
 
     }
     .show-nav  {
@@ -26,7 +26,7 @@ body {
         display: block;
         padding: 1.5;
         font-size: 5vw;
-        background-color: #0DA6E9;
+        
         color :white !important;
     }
     
